fixed erratic truncation in abstracts and marquees; cleaned up repetitive logic

--- a/app/scss/_marquee.scss
+++ b/app/scss/_marquee.scss
@@ -25,15 +25,6 @@ $marquee-overlay-size: 50%;
 
 }
 
-.c-marquee__sidebar-truncate {
-
-  @include bp(screen2) {
-    height: $marquee-height - 3.5em;
-    overflow: hidden;
-  }
-
-}
-
 .c-marquee__sidebar-more {
   @extend %o-button__7;
 }
