--- a/app/scss/_pub.scss
+++ b/app/scss/_pub.scss
@@ -1,7 +1,7 @@
 // ##### Publication Component ##### //
 
 .c-pub {
-  display: inline-block;
+  display: block;
   width: 100%;
   margin-bottom: $spacing-md;
   break-inside: avoid;
@@ -27,7 +27,5 @@
 }
 
 .c-pub__abstract {
-  max-height: 8em; // truncate beyond 6 lines per jquery.dotdotdot
   margin-bottom: $spacing-md;
-  overflow: hidden; // hide text beyond max-height
 }
